--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
-			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!</h4>
+			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">link</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a>			</h4>
@@ -202,7 +203,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
     <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao. Mutual-Guidance Transformer-Embedding Network For Video Salient Object Detection, IEEE Signal Processing Letters, 29: 1674-1678, 2022. <a href="https://github.com/mindingyao/MGT-Net">[<font color="red">github</font>]</a></p>
     <p>- Yao Jiang, Wenbo Zhang, <strong>Keren Fu*</strong>, Qijun Zhao. MEANet: Multi-Modal Edge-Aware Network for Light Field Salient Object Detection, Neurocomputing, 491: 78-90, 2022.</p>
     <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu*</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition,  123: 108414, 2022.</p>
-    <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 9(1): 155-175, 2023.</p>
+    <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 9(1): 155-175, 2023.<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">Honorable Mention Award</font>]</a></p>
     <p>- <strong>Keren Fu</strong>, Yao Jiang, Ge-Peng Ji, Tao Zhou, Qijun Zhao, Deng-Ping Fan. Light Field Salient Object Detection: A Review and Benchmark, Computational Visual Media, 8(4): 509-534, 2022.<a href="https://link.springer.com/article/10.1007/s41095-021-0256-2">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></p>
     <p>- Yi He, <strong>Keren Fu*</strong>, Peng Cheng, Jianwei Zhang. Facial Expression Recognition with Geometric Scattering on 3D Point Clouds, Sensors, 22(21): 8293, 2022.</p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, et al. PGM-Face: Pose-Guided Margin Loss for Cross-Pose Face Recognition, Neurocomputing, 460: 154-165, 2021.</p>
