--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
-			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">link</font>]</a></h4>
+			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">link</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!</h4>
