--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
-			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">link</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!</h4>
+			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-5: One paper is accepted by Visual Intelligence!<a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">link</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!<a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">github</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a>			</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a></h4>              
@@ -193,8 +194,9 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao. Parallax-aware Network for Light Field Salient Object Detection, IEEE Signal Processing Letters, 2024, Accepted.</p>
-    <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang. LSTPNet: Long short-term perception network for dynamic facial expression recognition in the wild, Image and Vision Computing, 142: 104915, 2024.</p>
+    <p>- Yao Jiang, Xinyu Yan, Ge-Peng Ji, <strong>Keren Fu*</strong>, Meijun Sun, Huan Xiong*, Deng-Ping Fan, Fahad Shahbaz Khan. Effectiveness Assessment of Recent Large Vision-Language Models, Visual Intelligence (VI), 2024. <a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></p>
+    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao. Parallax-aware Network for Light Field Salient Object Detection, IEEE Signal Processing Letters, 31: 810-814, 2024. <a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></p>
+    <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang. LSTPNet: Long short-term perception network for dynamic facial expression recognition in the wild, Image and Vision Computing, 142: 104915, 2024. <a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">github</font>]</a></p>
     <p>- <strong>Keren Fu</strong>, Jing He, Xiao Yang. Few-Shot Learning-based RGB-D Salient Object Detection: A Case Study, Neurocomputing, 512: 142-152, 2022.</p>
     <p>- Qian Chen, Zhenxi Zhang, Yanye Lu, <strong>Keren Fu*</strong>, Qijun Zhao. 3-D Convolutional Neural Networks for RGB-D
 Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Learning Systems, 35(3): 4309-4323, 2024. <a href="https://github.com/QianChen98/RD3D">[<font color="red">github</font>]</a></p>
@@ -247,7 +249,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
      
     <h3><strong>Conference papers</strong></h3>
     <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang, &ldquo;Long Short-Term Perception Network for Dynamic Facial Expression Recognition,&rdquo; in Chinese Conference on Pattern Recognition and Computer Vision (PRCV), 2023.</p>
-    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Guided Focal Stack Refinement Network for Light Field Salient Object Detection,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2023.</p>
+    <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Guided Focal Stack Refinement Network for Light Field Salient Object Detection,&rdquo; in IEEE International Conference on Multimedia and Expo (ICME), 2023. <a href="https://github.com/Yboera/GFRNet">[<font color="red">github</font>]</a></p>
     <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; in International Conference on Neural Information Processing (ICONIP), 2022. <a href="https://github.com/mindingyao/IANet">[<font color="red">github</font>]</a></p>
     <p>- Yukang Lu, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Depth-Cooperated Trimodal Network for Video Salient Object Detection,&rdquo; in IEEE International Conference on Image Processing (ICIP), 2022. <a href="https://arxiv.org/pdf/2202.06060.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/luyukang/DCTNet">[<font color="red">github</font>]</a></p>
     <p>- Zhuo Wang, Minyue Xiao, Jing He, Chao Zhang, <strong>Keren Fu</strong>, &ldquo;Bimodal Information Fusion Network for Salient Object Detection based on Transformer,&rdquo; in International Conference on Pattern Recognition and Machine Learning (PRML), 2022.</p>
