--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-7: One paper is accepted to ECCV 2024!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-6: Four papers are accepted to PRCV 2024!</h4>
 			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-5: One paper is accepted by Visual Intelligence!<a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">link</font>]</a></h4>
