--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!<a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">github</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a>			</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a><a href="https://github.com/Tennine2077/DIS-SAM/">[<font color="red">github</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a></h4>              
                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am invited to serve as a reviewer for CVPR 2024!</h4>
