--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-12: Two papers are accepted to ICASSP 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: I am invited to serve as a reviewer for CVPR 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: Two papers are accepted by IEEE TIP!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-7: One paper is accepted to ECCV 2024!</h4>
@@ -258,6 +259,8 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
      
     <h3><strong>Conference papers</strong></h3>
     
+    <p>- Xin Li, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Camouflaged Object Detection via Neural Architecture Search,&rdquo; in IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025.</p>
+    <p>- Daerji Suolang, Jiahao He, Wangchuk Tsering, <strong>Keren Fu*</strong>, Xiaofeng Li, Qijun Zhao, &ldquo;Lightweight Multi-Frequency Enhancement Network for RGB-D Video Salient Object Detection,&rdquo; in IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025.</p>
     <p>- Xuan Wu, Hongxiang Li, Yuanjiang Luo,Xuxin Cheng, Xianwei Zhuang, Meng Cao, <strong>Keren Fu*</strong>, &ldquo;Uncertainty-aware Sign Language Video Retrieval with Probability Distribution Modeling,&rdquo; in European Conference on Computer Vision (ECCV), 2024.</p>
     <p>- Zongming Peng, Qijun Zhao, <strong>Keren Fu</strong>, Yue Yang, Tie Liu, Fan Pan, Yangqianqian Chen, &ldquo;Identity-Preserving Animal Image Generation for Animal Individual Identification,&rdquo; in Chinese Conference on Pattern Recognition and Computer Vision (PRCV), 2024.</p>
     <p>- Pengyu Yin, <strong>Keren Fu*</strong>, Qijun Zhao,  &ldquo;Key Object Detection: Unifying Salient and Camouflaged Object Detection into One Task,&rdquo; in Chinese Conference on Pattern Recognition and Computer Vision (PRCV), 2024.</p>
