--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                <div class="col-md-8 col-sm-6"   >
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">Welcome! </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My name is Keren Fu (傅可人) and I'm a research associate professor (副研究员) and PhD supervisor (博士生导师) with the College of Computer Science (<a href="http://scubrl.org/"><font size="4" color="blue">Link to Biometrics Research Laboratory</font></a>), Sichuan Univerisity, Chengdu, China. </h3>
-                    <h4 class="wow fadeInUp" data-wow-delay="0.1s">(News: 现招收2025级入学的硕士生和博士生，欢迎报考304（计算机学院）和604（图像所）的同学联系我！)</h4>
+                   <!-- <h4 class="wow fadeInUp" data-wow-delay="0.1s">(News: 现招收2025级入学的硕士生和博士生，欢迎报考304（计算机学院）和604（图像所）的同学联系我！)</h4>-->
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- I received my dual Ph.D. degrees from both Shanghai Jiao Tong University and Chalmers University of Technology, Sweden, in 2016, and joined Sichuan University in 2017. </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My current interests mainly focus on visual computing, saliency analyses <a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">online demo</font>]</a>, stereo vision, and machine learning.</h3>
        
@@ -89,7 +89,8 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
-
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-2: Two papers are accepted to CVPR 2025!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2025-2: I am invited to serve as a reviewer for ICCV 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-12: Two papers are accepted to ICASSP 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: I am invited to serve as a reviewer for CVPR 2025!</h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-11: Two papers are accepted by IEEE TIP!</h4>
