--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-6: Four papers are accepted to PRCV 2024!</h4>
 			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-5: One paper is accepted by Visual Intelligence!<a href="https://arxiv.org/abs/2403.04306">[<font color="red">Arxiv</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-4: Our paper on video object segmentation has received Honorable Mention Award in CVMJ! Congrats to Ge-Peng and all co-authors!<a href="https://link.springer.com/journal/41095/updates/26965690">[<font color="red">Link</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Gate</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-2: One paper is accepted by IEEE Signal Processing Letters!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Gateway</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!<a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">Gate</font>]</a></h4>
-            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a><a href="https://github.com/Tennine2077/DIS-SAM/">[<font color="red">Gate</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!<a href="https://github.com/LLFabiann/LSTPNet/">[<font color="red">Gateway</font>]</a></h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a><a href="https://github.com/Tennine2077/DIS-SAM/">[<font color="red">Gateway</font>]</a></h4>
             <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
-                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Gate</font>]</a></h4>              
+                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Gateway</font>]</a></h4>              
                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am invited to serve as a reviewer for CVPR 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as  Outstanding Reviewer at ICCV 2023!<a href="https://iccv2023.thecvf.com/iccv2023.main.conference.program-38--MTE.php">[<font color="red">Link</font>]</a></h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-8: One paper on dynmaic facial expression recognition is accepted by PRCV-2023!</h4>
@@ -112,27 +112,27 @@
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-12: I am invited to serve as a PC member for IJCAI 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-10: I am invited to serve as a reviewer for CVPR 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-9: One paper on few-shot learning-based RGB-D SOD is accepted by Neurocomputing!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TNNLS!<a href="https://github.com/QianChen98/RD3D">[<font color="red">Gate</font>]</a></h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TNNLS!<a href="https://github.com/QianChen98/RD3D">[<font color="red">Gateway</font>]</a></h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by Computerized Medical Imaging and Graphics!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TMM!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-7: One paper is accepted by IEEE Signal Processing Letters!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-6: We release a Demo website for our previous RGB-D SOD paper published on ACMMM-2021! Try it yourself!!<a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-3: One paper is accepted by Neurocomputing!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Pattern Recognition!<a href="https://github.com/GewelsJI/ERRNet">[<font color="red">Gate</font>]</a></h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Gate</font>]</a></h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Pattern Recognition!<a href="https://github.com/GewelsJI/ERRNet">[<font color="red">Gateway</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Gateway</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: Congratulations to my master student Wenbo Zhang for acceptance of National Scholarship!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Gate</font>]</a></h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ICCV-2021!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Gate</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Gateway</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ICCV-2021!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Gateway</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: I will serve as a TPC member for IJCAI-2022!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ACMMM-2021!<a href="https://github.com/zwbx/DFM-Net">[<font color="red">Gate</font>]</a><a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by ACMMM-2021!<a href="https://github.com/zwbx/DFM-Net">[<font color="red">Gateway</font>]</a><a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-7: One paper is accepted by Neurocomputing!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-4: One paper is accepted by IEEE TII!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-4: One paper is accepted by IEEE TPAMI!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-4: One paper is accepted by Neurocomputing!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-3: One paper is accepted by ICME-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-1: One Neurocomputing paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-12: One paper is accepted by AAAI-2021!<a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">Gate</font>]</a></h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: We have released a Review and Benchmark for Light Field Salient Object Detection!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Gate</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-12: One paper is accepted by AAAI-2021!<a href="https://github.com/PPOLYpubki/RD3D/">[<font color="red">Gateway</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: We have released a Review and Benchmark for Light Field Salient Object Detection!<a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">Gateway</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-11: I was invited as a SPC member for IJCAI-2021!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: One Pattern Recognition paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-10: I serve as a TPC member for IJCAI-2021!</h4>
@@ -142,7 +142,7 @@
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-5: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One IEEE TMM paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-4: One Neurocomputing paper accepted!</h4>
-              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-2: One paper on RGB-D SOD is accepted by CVPR-2020!<a href="https://github.com/kerenfu/JLDCF/">[<font color="red">Gate</font>]</a></h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2020-2: One paper on RGB-D SOD is accepted by CVPR-2020!<a href="https://github.com/kerenfu/JLDCF/">[<font color="red">Gateway</font>]</a></h4>
               </div>
     </div>
   </div>
